--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ ul {
 
 .header {
   padding: 24px;
+  border-bottom: 1px solid var(--cornflower);
 }
 
 .header-container {
@@ -79,7 +80,6 @@ ul {
 .header-navigation {
   display: flex;
   align-items: center;
-  gap: 76px;
 }
 
 .list {
@@ -94,6 +94,7 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--iris);
+  margin-right: 76px;
 }
 
 .header-logo-span {
@@ -115,6 +116,7 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 
 .header-item-link:active,
@@ -152,17 +154,23 @@ ul {
 
 .hero-wrap {
   background-color: var(--navyblue);
-  text-align: center;
+
+  padding: 188px 0;
+}
+
+.hero-section {
+  /* margin: 0 auto; */
 }
 
 .hero-title {
   color: var(--white);
-  text-align: center;
+  margin: 0 auto;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   padding-top: 188px;
   padding-bottom: 48px;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -174,9 +182,15 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+  display: block;
   align-items: center;
   padding: 16px 32px;
+  margin: 0 auto;
   margin-bottom: 188px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
 }
 
 .hero .hero-button:hover,
@@ -186,12 +200,17 @@ ul {
 
 /*          FOUR PROS SECTION         */
 
+.second-section {
+  padding: 120px 0;
+}
+
 .pros-list-title {
   color: var(--navyblue);
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .pros-list-text {
@@ -206,12 +225,16 @@ ul {
 
 .pros {
   padding-top: 120px;
-  padding-bottom: 120px;
+
   display: flex;
   gap: 24px;
 }
 
 /*          What are we doing SECTION         */
+
+.third-section {
+  padding-bottom: 120px;
+}
 
 .about {
   color: var(--navyblue);
@@ -220,19 +243,33 @@ ul {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding: 72px;
+
+  margin-bottom: 72px;
 }
 
 .about-list {
   display: flex;
-  margin-bottom: 120px;
+
   gap: 24px;
+}
+
+.about-list-item {
+  width: calc((100% - 3 * 16px) / 3);
 }
 
 /*          Our Team SECTION         */
 
 .team {
   background-color: var(--cloud);
+}
+
+.fourth-section {
+  padding: 120px 0;
+}
+
+.team-ptoto {
+  width: 264px;
+  height: 260px;
 }
 
 .team-title {
@@ -242,23 +279,29 @@ ul {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding-top: 120px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .team-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 120px;
 }
 
 .team-list-separate {
   background-color: var(--white);
+  width: calc((100% - 3 * 24px) / 4);
+
+  border-radius: 0px 0px 4px 4px;
+}
+
+.name-prof {
+  padding: 32px 0;
 }
 
 .team-separate-name {
   color: var(--navyblue);
   text-align: center;
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -280,7 +323,7 @@ ul {
 }
 
 .footer-container {
-  padding-top: 102px;
+  padding: 100px 0;
 }
 
 .footer-logo {
@@ -291,6 +334,8 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--iris);
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-span {
@@ -301,12 +346,18 @@ ul {
   color: var(--cloud);
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-top: 17px;
+
   padding-bottom: 100px;
-  width: 264px;
+
+  max-width: 264px;
 }
 
 /*----------------------------PORTFOLIO----------------------------*/
+
+.portfolio-section {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
 
 .portfolio-item-button {
   color: var(--iris);
@@ -328,15 +379,16 @@ ul {
 .portfolio-item-button:focus {
   color: var(--white);
   background-color: var(--ocean);
+  border: 1px solid transparent;
 }
 
 .portfolio-list {
   display: flex;
   align-items: center;
-  padding-top: 96px;
-  padding-bottom: 72px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 72px;
   gap: 24px;
-  padding-left: 271px;
 }
 
 /*          PORTFOLIO ROWS         */
@@ -354,16 +406,24 @@ ul {
   color: var(--slate);
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .rows {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.rows-list {
+  width: calc((100% - 48px) / 3);
 }
 
 .rows-card {
   padding: 32px 16px;
+  border: 1px solid var(--cornflower);
+  border-top: none;
 }
 
 .rows-wrap {
