--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ ol {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
@@ -167,7 +169,7 @@ ul {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  padding-top: 188px;
+
   padding-bottom: 48px;
   max-width: 496px;
 }
@@ -185,7 +187,7 @@ ul {
   align-items: center;
   padding: 16px 32px;
   margin: 0 auto;
-  margin-bottom: 188px;
+
   min-width: 169px;
   height: 56px;
   border: none;
@@ -318,7 +320,7 @@ ul {
 
 .footer {
   background-color: var(--navyblue);
-  margin: 120px;
+  padding: 120px;
 }
 
 .footer-container {
